fixed the white space on smaller computers

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -3,7 +3,6 @@
     height: 92vh;
   }
 
-  /* start chat */
   .carousel-item img {
     width: 100%;
     height: 100%;
@@ -14,11 +13,6 @@
     font-size: 1.3rem;
     padding: 10px 20px;
   }
-  
-
-
-
-  /* end chat */
 
   .carousel-words {
     top: 180px;
@@ -42,7 +36,7 @@
   
   #carousel {
     position: relative;
-    margin-top: 86.75px;
+    margin-top: 86px;
     width: 100%;
   }
   
